fixed css issue for menu sshowing on large screens and hidden on small screens.

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -100,22 +100,36 @@ body {
 
 @media(min-width:768px) {
   #wrapper {
-    padding-left: 0;
+    padding-left: 250px;
   }
   #wrapper.toggled {
-    padding-left: 250px;
+    padding-left: 0px;
   }
   #sidebar-wrapper {
     width: 0;
   }
   #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 0px;
   }
   #page-content-wrapper {
     padding: 20px;
     position: relative;
   }
   #wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+  }
+}
+@media (min-width: 768px) {
+  #wrapper {
+    padding-left: 250px;
+  }
+
+  #wrapper #sidebar-wrapper {
+    width: 250px;
+  }
+
+  #wrapper #page-content-wrapper {
     position: relative;
     margin-right: 0;
   }
